--- a/client/src/components/Dialogs/Dialogs.scss
+++ b/client/src/components/Dialogs/Dialogs.scss
@@ -1,6 +1,4 @@
-@import "~styles/variables";
-
-.dialogs {
+ .dialogs {
   &__search {
     padding: 2px 20px 20px 20px;
 
@@ -16,7 +14,7 @@
     $item: &;
     display: flex;
     margin-bottom: 20px;
-    color: $black;
+    color: #000;
 
     &:hover {
       background-color: #f3f7ff;
