--- a/client/src/components/CardProducts/style.css
+++ b/client/src/components/CardProducts/style.css
@@ -1,9 +1,8 @@
 
     .cardProductWrapper { 
       display: flex;
-      width: 260px;
-      height: 400px;
-      box-sizing: border-box;
+      width: 290px;
+      height: 460px; 
       justify-content: center;
       align-items: center;
       flex-direction: column;
@@ -46,19 +45,23 @@
       height: 100%;
     }
  
-    .txtCardsName {
-      font-weight: 500; 
-      font-size: 15px;
-      color: #121111;
-      line-height: 1.2;
-      text-transform: uppercase;
+    .txtCardsName { 
+      display: block;
+      width: 100%;
+      height: 62px;
+      color: #1a1717;
+      font-size: 18px;
+      line-height: 1.1;
       text-align: center;
+      text-decoration: none;
+      padding: 15px 15px 5px;
+      overflow: hidden; 
     }  
 
     .txtCardsAbout {
       margin-top: 5px;
       font-weight: 400;
-      height: 45%;
+      height: 30%;
       font-size: 12px;
       overflow: scroll;
       line-height: 1.4;
@@ -69,9 +72,13 @@
 
     .radioContainer {
       display: flex;
-      justify-content: center;
-      flex-direction: column;
-      padding-top: 6px;
+      align-items: center;
+      justify-content: space-between;
+      flex-direction: row;
+      padding: 9px;
+      width: 100%;
+      height: 50px;
+      margin: 10px 0px;
     } 
 
     .colorLightGreen {
@@ -90,3 +97,56 @@
       border-color: #60a8f0;
     }
  
+    .weigthContainer {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      height: 60px;
+      width: 100%; 
+    }
+ 
+    .leftWeigthContainer {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      height: 60px;
+      width: 20%; 
+    }
+ 
+    .rigthWeigthContainer {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      height: 60px;
+      width: 80%; 
+    }
+
+    .price {
+      display: inline-block;
+      *display: inline;
+      vertical-align: top;
+      line-height: 17px;
+      padding: 5px 10px;
+      border-radius: 5px;
+      margin-right: 10px;
+      white-space: nowrap;
+      font-size: 24px;
+    }
+
+    .rub {
+      display: inline-block; 
+      font-size: 24px;
+      line-height: 5px;
+      padding-top: 6px;
+      border-bottom: 1px solid #FFFFFF;
+      width: 0.4em;
+      vertical-align: top;
+  }
+
+  .titleWeigth {
+    font-weight: 800;
+    margin-right: 10px;
+  }
