--- a/client/src/components/InputCardProducts/style.css
+++ b/client/src/components/InputCardProducts/style.css
@@ -3,14 +3,13 @@
       display: flex;
       width: 100%;
       height: 40px; 
-      justify-content: center;
+      justify-content: flex-end;
       align-items: center;
       flex-direction: row;   
       margin-top: 5px;
     }
 
     .inputNumberContainer {
-      display: flex;
-      margin: 0px 10px;
+      display: flex; 
     }
 
