--- a/client/src/Screens/ChatScreen/style.css
+++ b/client/src/Screens/ChatScreen/style.css
@@ -22,3 +22,29 @@
 .chat_compinsation {
   margin-top: 140px;
 }
+
+.skeletonChatContainer {
+  display: flex;
+  width: 90%;
+  flex-direction: row; 
+  padding: 50px;
+}
+
+.skeletonMenuContainer {
+  display: flex;
+  width: 10%; 
+  flex-direction: column; 
+}
+
+.skeletonDialogContainer {
+  display: flex;
+  width: 40%;
+  flex-direction: column; 
+  padding: 50px;
+}
+
+.skeletonMessagesContainer {
+  display: flex; 
+  width: 50%;
+  flex-direction: column; 
+}
