--- a/client/src/components/MessageTextArea/style.css
+++ b/client/src/components/MessageTextArea/style.css
@@ -5,6 +5,10 @@
   background-color: white; 
   flex-direction: column; 
   overflow: scroll;
-  padding: 30px; 
+  padding: 30px;
+  border-top: 1px solid #f1f1f1; 
 }
  
+.messageTextAreaContainer .ant-empty-normal {
+  margin: auto 0;
+}
